tests/paczka1/fuzzy1/38443656.err
Error in line 6: ENzIL A935 92,3
Error in line 11: XRqJFiVA5z A360 q8,3
Error in line 8: ENzIL A454 19,1
Error in line 26: iG2w7QiNwz A360 -2,5
Error in line 15: iG2w7QiNwz A360 30,9
